updated working links and fix side to side scroll on mobile

--- a/assets/stylesheets/part2.css
+++ b/assets/stylesheets/part2.css
@@ -33,7 +33,7 @@ header h1,
 p .top {
   color: var(--beige);
   background: transparent;
-  font-size: 80px;
+  font-size: 60px;
 }
 
 .top {
@@ -186,9 +186,10 @@ div h1 {
 justify-content: start;}
 
 /* media query*/
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 745px) {
   main,
-  nav {
+  nav,
+  header {
     flex-direction: column;
   }
 }
